--- a/style.css
+++ b/style.css
@@ -1,6 +1,20 @@
+#main-header {
+    background-color: #333;
+    color: #fff;
+    padding: 15px 0;
+  }
+  .title {
+    color: #b22222;
+    font-size: 2.5em;
+    text-align: center;
+    background-color: #fff3f3;
+  }
+  header > div > ul > li > a {
+    color: #fff;
+    text-decoration: none;
+  }
 body{
-    margin: 10px;
-    padding: 15px;
+    margin: 8px;
     background-color: rgb(245, 245, 245);
 }
 h1{
@@ -9,7 +23,7 @@ h1{
 }
 .align{
     text-align: center;
-    background-color: blanchedalmond;
+    background-color: #fff3f3;
 }
 .center{
     text-align: left;
